# HVAC

./: .gitignore  .main.c.swp  CMakeLists.txt  Makefile  Sensor.db  comparewithdb.txt  config.h  connmgr.c  connmgr.h  datamgr.c  datamgr.h  emac.h  hashtable.c  hashtable.h  logger.c  logger.h  main.c  new.txt  room_sensor.map  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  sensor_gateway  sensor_node.c  sensor_test  sensornodes.c  sensors  test  test_server.c  valgrind-out.txt
lib/: dplist.c  dplist.h  tcpsock.c  tcpsock.h
tests/: Hashtable_test.c  Makefile  Sensor.db  connmgr_test.c  connmgrtest  datamgr_test.c  hash_table_test  log_test.c  sensor_data  sensor_data_text  strg_test  strgmgr_test.c  valgrind_test.txt
